# nevermore

./: .gitmodules  CMakeLists.txt  README.md
cmake/: AddModules.cmake  BuildInfo.cmake  BuildInfo.h.in
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/algorithm/include/nevermore/: Numeric.h
src/log/: BaseLogger.cpp  CMakeLists.txt  LogFormatter.cpp  Logger.cpp  SpdLogger.cpp  StdoutAppender.cpp  global_log_level.cpp
src/log/include/nevermore/: BaseLogger.h  LogAppender.h  LogEntry.h  LogFormatter.h  LogLevel.h  Logger.h  SpdLogger.h  StdoutAppender.h
src/utility/: CMakeLists.txt  LogFormatter.cpp  Logger.cpp  StdoutAppender.cpp  StdoutLogger.cpp  arabic_to_roman_numeric.cpp
src/utility/include/nevermore/: Converter.h  Logger.h  Noncopyable.h
test/: CMakeLists.txt  arabic_to_roman_numeric_converter_test.cpp
test/algorithm/: CMakeLists.txt  numeric_test.cpp
test/log/: CMakeLists.txt  base_logger_test.cpp  log_test.cpp  logger_test.cpp
test/utility/: CMakeLists.txt  arabic_to_roman_numeric_converter_test.cpp  logger_test.cpp
